rewrite tests without using jpa